2010-02-14  Daniel Mierswa  <impulze@impulze.org>

	use calloc instead explicit instantiation
	halevt_get_iterator_value:
	  use calloc instead of explicitly initializing members to NULL after
	  successful allocation

	fix illegal free
	halevt_get_iterator_value:
	halevt_get_property_value:
	  if we don't set the first array member (see default case and/or if
	  libhal returns a NULL pointer), then it will be left unitialized
	  leaving the caller to do an illegal free when recursively removing the
	  contents of the array, hence we always initialize it to NULL

	release glib mainloop reference
	main:
	  we release our reference so we reach a cleaner exit state (this makes
	  memory checkers happer)

	fix memory leak
	halevt_free_boolean_expression:
	  halevt_new_boolean_expression duplicates the original string and
	  allocates an array of parents, both were never deallocated

	split public/private interface
	- due to the change, reorder function definitions so we don't need to
	  prototype them which also makes clear what needs what
	- make private implementation functions static
	- halevt_property_value no longer needs the preeceding declaration
	  of halevt_duplicate_str_list because of reordering

	do not exit application when cleaning resources

	provide cleanup function (HAL)
	halevt_cleanup_HAL:
	  - as a counter-part to startup_HAL, this function was introduced to
	    cleanup HAL resources in order to make memory checkers happy.
	  - it may also come in handy if we're going to reuse things after HAL
	    connection was lost

	implementation details:
	  - libhal_ctx_shutdown asks HAL to remove itself from the D-Bus bus
	    including filters and watches
	  - then we lose a reference to the D-Bus bus in order to make D-Bus
	    release all the resources associated with this connection
	  - dbus_shutdown then eliminates all long-living memory consumed by
	    D-Bus, this is not necessary and requires a call to